force-app/main/default/objects/opa_manager_iskill_function__c/opa_manager_iskill_function__c.object-meta.xml
<CustomObject>
    <label>opa_manager_iskill_function</label>
    <nameField>
        <label>opa_manager_iskill_function</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>opa_manager_iskill_functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>