force-app/main/default/objects/opa_manager_iskill_function__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>opa_manager_iskill_functions</relationshipLabel>
    <relationshipName>opa_manager_iskill_functions</relationshipName>
    <type>Lookup</type>
</CustomField>