force-app/main/default/objects/opa_manager_iskill_function__c/fields/Account_Function_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Function_c__c</fullName>
    <label>Account_Function__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>