force-app/main/default/objects/opa_manager_iskill_function__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>opa_manager_iskill_functions</relationshipLabel>
    <relationshipName>opa_manager_iskill_functions</relationshipName>
    <type>Lookup</type>
</CustomField>