force-app/main/default/objects/opa_manager_iskill_function__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>