force-app/main/default/objects/opa_manager_iskill_function__c/fields/iskill_id__c.field-meta.xml
<CustomField>
    <fullName>iskill_id__c</fullName>
    <label>iskill_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>