force-app/main/default/objects/opa_manager_iskill_function__c/fields/LegacyOpaID_Person__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID_Person__c</fullName>
    <label>LegacyOpaID__Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>