force-app/main/default/objects/opa_manager_iskill_function__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>opa_manager_iskill_functions</relationshipLabel>
    <relationshipName>opa_manager_iskill_functions</relationshipName>
    <type>Lookup</type>
</CustomField>