force-app/main/default/objects/opa_manager_iskill_function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LegacyOpaID_Person__c</columns>
    <columns>LegacyOpaID_Company__c</columns>
    <columns>CompanyName__c</columns>
    <columns>Account_Function_c__c</columns>
    <columns>iskill__c</columns>
    <columns>iskill_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>iskill_id__c</field>
        <operation>equals</operation>
        <value>273</value>
    </filters>
    <label>All Records</label>
</ListView>